--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- 주소창 테마 색상 지정 -->
-    <meta name="theme-color" content="#42b983" />
+    <meta name="theme-color" content="#f8fafc" />
 
     <link rel="manifest" href="/manifest.json" />
     <link
