--- a/index.html
+++ b/index.html
@@ -2,9 +2,20 @@
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- 💪(상일) iOS Safari 뷰포트 최적화: 확대 비활성화, 뷰포트 핏 설정 -->
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover"
+    />
     <!-- 주소창 테마 색상 지정 -->
-    <meta name="theme-color" content="#42b983" />
+    <meta name="theme-color" content="#f8fafc" />
+    <!-- 💪(상일) iOS PWA 전체화면 모드 설정 -->
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <!-- 💪(상일) 상태바 영역까지 앱에 포함 -->
+    <meta
+      name="apple-mobile-web-app-status-bar-style"
+      content="black-translucent"
+    />
 
     <link rel="manifest" href="/manifest.json" />
     <link
