fix: 상단 화면색 변경

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover"
     />
     <!-- 주소창 테마 색상 지정 -->
-    <meta name="theme-color" content="#f8fafc" />
+    <meta name="theme-color" content="#ffffff" />
     <!-- 💪(상일) iOS PWA 전체화면 모드 설정 -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <!-- 💪(상일) 상태바 영역까지 앱에 포함 -->
