update: 정책 ui 수정

--- a/public/index.html
+++ b/public/index.html
@@ -32,9 +32,15 @@
       href="/icons/icon-512x512.png"
     />
 
-    <title>머니버니</title>
+    <title>MoneyBunny</title>
   </head>
   <body>
+    <div id="splash">
+      <div class="wrap">
+        <img src="/icons/splash.png" alt="MoneyBunny" />
+        <div class="title">MoneyBunny</div>
+      </div>
+    </div>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
